--- a/Other/cs.bib
+++ b/Other/cs.bib
@@ -214,3 +214,19 @@
   pages={1369--1378},
   year={2018}
 }
+
+@inproceedings{ng2002discriminative,
+  title={On discriminative vs. generative classifiers: A comparison of logistic regression and naive bayes},
+  author={Ng, Andrew Y and Jordan, Michael I},
+  booktitle={Advances in neural information processing systems},
+  pages={841--848},
+  year={2002}
+}
+
+@article{rennie2005regularized,
+  title={Regularized logistic regression is strictly convex},
+  author={Rennie, Jason DM},
+  journal={Unpublished manuscript. URL people. csail. mit. edu/jrennie/writing/convexLR. pdf},
+  volume={745},
+  year={2005}
+}
